Adding a Lisp version
This is a nearly line-by-line translation of the Python script with
some utility functions and macros to make dealing with Java more
pleasant.  Requires Armed Bear Common Lisp: <http://abcl.org>